sprites move towards player

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\Scripts\GM.cs" />
      <Compile Include="Assets\Scripts\moveCam.cs" />
      <Compile Include="Assets\Scripts\moveOrb.cs" />
+     <Compile Include="Assets\Scripts\networkingOpportunities.cs" />
      <Compile Include="Assets\Scripts\rorateEffect.cs" />
      <Compile Include="Assets\Scripts\textZoomIn.cs" />
      <Compile Include="Assets\Scripts\trulyMoveOrb.cs" />
