added singleton, namespace, trees, endless sidewalk

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,11 +51,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\GlobalVariables.cs" />
      <Compile Include="Assets\Scripts\GM.cs" />
+     <Compile Include="Assets\Scripts\GroundScroll.cs" />
      <Compile Include="Assets\Scripts\moveCam.cs" />
      <Compile Include="Assets\Scripts\moveOrb.cs" />
      <Compile Include="Assets\Scripts\networkingOpportunities.cs" />
-     <Compile Include="Assets\Scripts\rorateEffect.cs" />
+     <Compile Include="Assets\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\Scripts\rotateEffect.cs" />
+     <Compile Include="Assets\Scripts\Singleton.cs" />
+     <Compile Include="Assets\Scripts\spawner.cs" />
      <Compile Include="Assets\Scripts\startScreen.cs" />
      <Compile Include="Assets\Scripts\stats.cs" />
      <Compile Include="Assets\Scripts\textZoomIn.cs" />
