--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Scripts\GM.cs" />
      <Compile Include="Assets\Scripts\GroundScroll.cs" />
      <Compile Include="Assets\Scripts\moveCam.cs" />
+     <Compile Include="Assets\Scripts\MoveGround.cs" />
      <Compile Include="Assets\Scripts\moveOrb.cs" />
      <Compile Include="Assets\Scripts\networkingOpportunities.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
